tests/baselines/reference/for-of38.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of38.ts(2,20): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of38.ts (1 errors) ====
    var map = new Map([["", true]]);
    for (var [k, v] of map) {
                       ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }